// gRPC 服务定义示例
syntax = "proto3";

package examples;

option go_package = "rich_go/api/proto/examples";

// 用户服务
service UserService {
  // 获取用户信息
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  
  // 创建用户
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  
  // 流式获取用户列表
  rpc ListUsers (ListUsersRequest) returns (stream User);
}

// 获取用户请求
message GetUserRequest {
  int64 user_id = 1;
}

// 获取用户响应
message GetUserResponse {
  User user = 1;
}

// 创建用户请求
message CreateUserRequest {
  string name = 1;
  string email = 2;
}

// 创建用户响应
message CreateUserResponse {
  User user = 1;
}

// 用户列表请求
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// 用户信息
message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int64 created_at = 4;
}

